test/param/diten/castParamToClass.good
castParamToClass.chpl:1: In function 'main':
castParamToClass.chpl:3: error: illegal cast from int(64) to object
