test/param/diten/castParamToClass.chpl
proc main {
  param a:int = 1;
  var b = a: object;
}
